<resources>
    <string name="app_name">JoCare</string>
    <string name="medication_reminder">Medication Reminder</string>
    <string-array name="TimesDay">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="DaysWeek">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string name="forget"><u>Forget Password ?</u></string>
    <string name="jocare"><b>JoCare</b></string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="pleaselogin">Please log in with your account to continue</string>
    <string name="or">OR</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="Emr">Emergency Number</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="already">Already have an account </string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="national_id">National ID</string>
    <string name="role">Role</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="panicHome">When you are in a need for a help just click the image</string>
    <string name="pinfo">Personal Information</string>
    <string name="pan">Panic Button</string>
    <string name="panic">Please enter your emergency numbers :</string>
    <string name="about">About JoCare</string>
    <string name="help">Disclaimer</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="policy">Privacy Policy</string>
    <string name="out">Logout</string>
    <string name="more">More</string>
    <string name="careG">Care Guidelines</string>
    <string name="hairC">Hair Care</string>
    <string name="hair_care">Hair Care</string>
    <string name="hair1">Hair Care :</string>
    <string name="hair2">How to Maintain Healthy Hair :</string>
    <string name="hair3">Hair care is an overall term for hygiene and cosmetology involving the hair which grows from the human scalp, and to a lesser extent facial, pubic and other body hair. Hair care routines differ according to an individual\'s culture and the physical characteristics of one\'s hair. Hair may be colored, trimmed, shaved, plucked or otherwise removed with treatments such as waxing, sugaring and threading. Hair care services are offered in salons, barbershops and day spas, and products are available commercially for home use. Laser hair removal and electrolysis are also available, though these are provided (in the US) by licensed professionals in medical offices or speciality spas.</string>
    <string name="skinCare">Skin Care</string>
    <string name="skin1">Dermatologist Recommendations :</string>
    <string name="skin2">To maintain healthy skin, dermatologists recommend the following tips:\n\n1) Wear sunscreen daily.\n2) Stay out of tanning beds.\n3) Simplify your skin care routine.\n4) Choose skin care products formulated for your skin type.\n5) Treat your lips.\n6) Keep your hands off your face.\n7) Check your skin regularly.</string>
    <string name="dentalCare">Dental Care</string>
    <string name="dental1">Dental Care :</string>
    <string name="dental2">The American Dental Association has recommended visiting a dentist every six months for checkups and cleanings is essential. Therefore, you will have to decide how often you need to get the dental care recommended. The ADA has made its recommendations for maintaining optimal oral health as determined by a dentist. This indicates that while you can follow the general guideline to visit your dentist every six months it is possible that you may have to make additional visits depending on the condition of your oral health.</string>
    <string name="dental3">Recommendations for Routine Cleanings :</string>
    <string name="dental4">Routine dental care will be available with professional teeth cleaning. It is one of the best methods for dental patients to prevent the diagnosis of oral problems. The dentists offering routine dental care in Omaha, NE recommend cleanings for their patient’s teeth every six months. However many patients visit them routinely and therefore will only need cleanings once a year. The regular visits of the patient to the dentist would have benefited the patient and allowed them to have a healthy mouth preventing the need to have their teeth cleaned as often as the people that do not receive dental care routinely.</string>
    <string name="newsFeed">News Feed</string>
    <string name="vaccines">How do COVID-19 vaccines compare with other existing vaccines?</string>
    <string name="n1">The novelty of the COVID-19 vaccines may seem daunting for some, and it is natural for questions to arise on their effectiveness. In this feature, we examine the difference between effectiveness and efficacy, compare the COVID-19 frontrunner vaccines to other vaccines, such as the flu shot, and compare their safety considerations.
As Pfizer/BioNTech roll out their COVID-19 vaccine throughout the United Kingdom and the United States, the world wonders how effective it will be.
Looking at the three leading vaccines that we have previously reported on, Pfizer/BioNTech boasts 95% efficacy, the Oxford/AstraZeneca vaccine candidate has an average of 70% efficacy, while the Moderna vaccine candidate reportedly has 94.1% efficacy.
But what does this say about their effectiveness? And how does it compare with vaccines against the flu, polio, and measles?</string>
    <string name="n2">Effectiveness vs. efficacy — what is the difference?</string>
    <string name="n3">Firstly, it is worth noting that “effectiveness” and “efficacy” are not the same. Despite news outlets frequently using them interchangeably, efficacy refers to how a vaccine performs under ideal lab conditions, such as those in a clinical trial. In contrast, effectiveness refers to how it performs in the real world
In other words, in a clinical trial, a 90% efficacy means that there are 90% fewer cases of disease in the group receiving the vaccine compared with the placebo group.
However, the participants chosen for a clinical trial tend to be healthier and younger than those in the general population, and they generally have no underlying conditions. Furthermore, researchers do not normally include certain groups in these studies, such as children or pregnant people.
So, while a vaccine can prevent disease in a trial, we might see this effectiveness drop when administered to the wider population.
However, that is not in itself a bad thing. </string>
    <string name="n4">Flu shot effectiveness:</string>
    <string name="n5">Vaccines do not need to have high effectiveness to save thousands of lives and prevent millions of disease cases.
The popular flu shot, for example, has an effectiveness of 40­–60%, according to the Centers for Disease Control and Prevention (CDC).
However, during 2018­–2019, it prevented around “4.4 million influenza illnesses, 2.3 million influenza-associated medical visits, 58,000 influenza-associated hospitalizations, and 3,500 influenza-associated deaths.”
It is also worth noting that the flu vaccine’s effectiveness varies from season to season, due to the nature of the flu viruses circulating that year. Determining the precise rate of effectiveness can be challenging.
Finally, it bears mentioning that the number of doses can also improve effectiveness for some vaccines. For the flu shot, two doses of the vaccine instead of one can offer a protection boost, but this benefit is limited to only a few specific groups, such as children or organ transplant recipients.
The booster dose does not seem to benefit people over the age of 65 or those with a compromised immune system.
By contrast, as we will see below, for vaccines, such as the ones against polio and measles, a higher number of doses is required to achieve peak effectiveness.</string>
    <string name="leanOut">COVID-19: Is it time for male leaders to ‘lean out’?</string>
    <string name="l1">Leaving women out of COVID-19 decision-making is not just bad for women — it’s bad for everyone. Research shows that achieving gender parity correlates with better outcomes in the pandemic overall, yet a new analysis found that only 3.5% of COVID-19 decision-making bodies have an equitable number of men and women. What does this mean for healthcare? We spoke to a panel of experts to find out.
Past outbreaks of diseases such as Zika and Ebola have taught us the same lesson time and time again: In situations of crisis, women’s rights and needs are pushed aside because they are seen as a bonus or privilege rather than a necessity.
The trajectory is always the same — women make up the vast majority of care workers and are also overwhelmed with informal care duties, yet their contribution to decision-making is lacking. According to recent research, only 3.5% of 115 COVID-19 decision-making groups across 87 countries contained an equitable number of men and women.
</string>
    <string name="l2">What inspired you to carry out your analysis? </string>
    <string name="l3">While current evidence has been showing that COVID-19 has been more severe for men, we do always know that historically women are disproportionately affected by health emergencies, and that was one of the big, big motivations for even doing this research — because we’ve seen statistically that women have this kind of triple burden in terms of economic and social impact, and yet they’re often [absent from] leadership.
</string>
    <string name="l4">What are the implications of this gender imbalance for vaccine research and clinical trials? </string>
    <string name="l5">There is a lot of focus now on the vaccine as a solution, […] but it shows another important problem that we have had in medical science for a long time: That often in clinical trials, there is not an equal representation, which is an issue due to mostly biological factors — like women having different hormonal systems and different immune systems than men.
[And if women] are not represented, especially, for example, in vaccine trials, it could be that something is developed that has not the same effect on men and women, or it has more side effects for one or the other. And interestingly enough, this is a very well-researched problem, so it should be on the agenda of every researcher in the field, but it seems like it’s not.
And now we’re coming to this very specific situation where research is done in a very short time — the timeframe we have is not what it normally takes to develop a vaccine, so it’s really research on a speed line. And what we see is that we might make those mistakes. </string>
</resources>