<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">
    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="1dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="342dp"
        android:layout_height="560dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        app:cardElevation="25dp"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:fontFamily="sans-serif-condensed"
            android:text="Sign Up"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="25dp"
            android:fontFamily="sans-serif-condensed"
            android:text="Create your account"
            android:textAlignment="center"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="400dp"
            android:layout_marginRight="25dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/role"
            android:textAlignment="center"
            android:textColor="@color/white" />
        <RadioGroup
            android:id="@+id/role"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="390dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rbDoctor"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:text="@string/doctor"
                android:textColor="@color/white" />
            <RadioButton
                android:id="@+id/rbPatient"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:text="@string/patient"
                android:textColor="@color/white" />
        </RadioGroup>
        <EditText
            android:id="@+id/natId"
            android:layout_width="298dp"
            android:layout_height="45dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="175dp"
            android:background="@drawable/signuppage"
            android:hint="@string/national_id"
            android:inputType="number" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="298dp"
            android:layout_height="45dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/signuppage"
            android:hint="@string/firstName"
            android:inputType="text" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="298dp"
            android:layout_height="45dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="126dp"
            android:background="@drawable/signuppage"
            android:hint="@string/lastName"
            android:inputType="text" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/signCode"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="225dp"
            android:background="@drawable/signuppage"
            android:importantForAutofill="no"
            android:inputType="number|phone"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/phoneNumReg"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="225dp"
            android:background="@drawable/signuppage"
            android:hint="@string/Emr"
            android:inputType="number"
            />

        <EditText
            android:id="@+id/upPass"
            android:layout_width="298dp"
            android:layout_height="45dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="275dp"
            android:background="@drawable/signuppage"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirm"
            android:layout_width="298dp"
            android:layout_height="45dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="325dp"
            android:background="@drawable/signuppage"
            android:hint="@string/confirmPass"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="435dp"
            android:buttonTint="@color/white"
            android:text="By signing up you are accepting the"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="190dp"
            android:layout_marginTop="453dp"
            android:text="@string/policy"
            android:textColor="#151e3d" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="453dp"
            android:text="and"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="453dp"
            android:text="@string/terms"
            android:textColor="#151e3d" />

        <Button
            android:id="@+id/upBt"
            android:layout_width="289dp"
            android:layout_height="45dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="490dp"
            app:cornerRadius="24dp"
            android:fontFamily="sans-serif-condensed"
            android:text="signUp"
            android:backgroundTint="#1f456e"
            android:textColor="@color/white" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="20dp"
        android:text="@string/already"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/upText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingTop="2dp"
        android:text="Sign In"
        android:textColor="#151e3d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />
</androidx.constraintlayout.widget.ConstraintLayout>